--- a/KancopySaihu/KancopySaihu.ui
+++ b/KancopySaihu/KancopySaihu.ui
@@ -14,32 +14,119 @@
    <string>KancopySaihu - 設定</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0" colspan="2">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>音声ファイル:</string>
       </property>
      </widget>
     </item>
-    <item>
-     <widget class="QLineEdit" name="lineFileName"/>
+    <item row="1" column="2">
+     <widget class="QLabel" name="labelTempo">
+      <property name="text">
+       <string>0</string>
+      </property>
+     </widget>
     </item>
-    <item>
+    <item row="3" column="2">
+     <widget class="QComboBox" name="comboBoxRangeL"/>
+    </item>
+    <item row="0" column="8">
      <widget class="QPushButton" name="btnRef">
       <property name="text">
        <string>参照</string>
       </property>
      </widget>
     </item>
-    <item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>テンポ:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="2">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>1 /</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0" colspan="2">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>クオンタイズ:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="3" colspan="4">
+     <widget class="QComboBox" name="comboBoxQuantize"/>
+    </item>
+    <item row="3" column="3">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>～</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2" colspan="6">
+     <widget class="QLineEdit" name="lineFileName"/>
+    </item>
+    <item row="0" column="9">
      <widget class="QPushButton" name="btnRecord">
       <property name="text">
        <string>録音</string>
       </property>
      </widget>
     </item>
+    <item row="3" column="4">
+     <widget class="QComboBox" name="comboBoxRangeH"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>音域:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="3" colspan="5">
+     <widget class="QPushButton" name="btnAnalyze">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>解析(&amp;A)</string>
+      </property>
+     </widget>
+    </item>
    </layout>
+   <zorder>label</zorder>
+   <zorder>btnRef</zorder>
+   <zorder>btnRecord</zorder>
+   <zorder>label_4</zorder>
+   <zorder>label_6</zorder>
+   <zorder>labelTempo</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_3</zorder>
+   <zorder>comboBoxQuantize</zorder>
+   <zorder>comboBoxRangeL</zorder>
+   <zorder>lineFileName</zorder>
+   <zorder>label_5</zorder>
+   <zorder>comboBoxRangeH</zorder>
+   <zorder>btnAnalyze</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="statusTip">
