--- a/KancopySaihu/analysis.ui
+++ b/KancopySaihu/analysis.ui
@@ -14,23 +14,6 @@
    <string>Analysis</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="3" colspan="3">
-    <widget class="QPushButton" name="pushCancel">
-     <property name="text">
-      <string>キャンセル(&amp;C)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="pushAnalyze">
-     <property name="text">
-      <string>再解析(&amp;A)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="6">
-    <widget class="QOpenGLWidget" name="openGLWidget"/>
-   </item>
    <item row="3" column="0">
     <widget class="QPushButton" name="pushOK">
      <property name="text">
@@ -38,17 +21,10 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="5">
-    <widget class="QToolButton" name="toolScaleDown">
+   <item row="3" column="3" colspan="3">
+    <widget class="QPushButton" name="pushCancel">
      <property name="text">
-      <string>-</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="4">
-    <widget class="QToolButton" name="toolScaleUp">
-     <property name="text">
-      <string>+</string>
+      <string>キャンセル(&amp;C)</string>
      </property>
     </widget>
    </item>
@@ -62,6 +38,43 @@
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="pushAnalyze">
+     <property name="text">
+      <string>再解析(&amp;A)</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="4">
+    <widget class="QToolButton" name="toolScaleUp">
+     <property name="text">
+      <string>+</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="6">
+    <widget class="QOpenGLWidget" name="openGLWidget"/>
+   </item>
+   <item row="1" column="5">
+    <widget class="QToolButton" name="toolScaleDown">
+     <property name="text">
+      <string>-</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="6">
+    <widget class="QLabel" name="labelStatus">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>10</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>ステータス:</string>
      </property>
     </widget>
    </item>
