--- a/KancopySaihu/KancopySaihu.ui
+++ b/KancopySaihu/KancopySaihu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>600</width>
-    <height>377</height>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,27 +15,24 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="2">
+    <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>音声ファイル:</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QLabel" name="labelTempo">
-      <property name="text">
-       <string>0</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="2">
-     <widget class="QComboBox" name="comboBoxRangeL"/>
-    </item>
-    <item row="0" column="8">
+    <item row="0" column="6">
      <widget class="QPushButton" name="btnRef">
       <property name="text">
        <string>参照</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="7">
+     <widget class="QPushButton" name="btnRecord">
+      <property name="text">
+       <string>録音</string>
       </property>
      </widget>
     </item>
@@ -52,45 +49,26 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="2">
-     <widget class="QLabel" name="label_3">
+    <item row="1" column="1">
+     <widget class="QLabel" name="labelTempo">
       <property name="text">
-       <string>1 /</string>
+       <string>0</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="2">
+    <item row="2" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>クオンタイズ:</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="3" colspan="4">
-     <widget class="QComboBox" name="comboBoxQuantize"/>
-    </item>
-    <item row="3" column="3">
-     <widget class="QLabel" name="label_5">
+    <item row="2" column="1">
+     <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>～</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
+       <string>1 /</string>
       </property>
      </widget>
-    </item>
-    <item row="0" column="2" colspan="6">
-     <widget class="QLineEdit" name="lineFileName"/>
-    </item>
-    <item row="0" column="9">
-     <widget class="QPushButton" name="btnRecord">
-      <property name="text">
-       <string>録音</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="4">
-     <widget class="QComboBox" name="comboBoxRangeH"/>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_4">
@@ -99,7 +77,27 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="3" colspan="5">
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>オフセット[s]:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_8">
+      <property name="text">
+       <string>閾値[%]:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="5">
+     <widget class="QLineEdit" name="lineFileName"/>
+    </item>
+    <item row="2" column="3" colspan="3">
+     <widget class="QComboBox" name="comboBoxQuantize"/>
+    </item>
+    <item row="6" column="2" colspan="4">
      <widget class="QPushButton" name="btnAnalyze">
       <property name="minimumSize">
        <size>
@@ -112,6 +110,48 @@
       </property>
      </widget>
     </item>
+    <item row="5" column="4" colspan="2">
+     <widget class="QDoubleSpinBox" name="doubleSpinBoxThreshold">
+      <property name="decimals">
+       <number>2</number>
+      </property>
+      <property name="maximum">
+       <double>100.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+      <property name="value">
+       <double>1.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="4" colspan="2">
+     <widget class="QDoubleSpinBox" name="doubleSpinBoxOffset">
+      <property name="decimals">
+       <number>6</number>
+      </property>
+      <property name="maximum">
+       <double>30.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="5">
+     <widget class="QComboBox" name="comboBoxRangeH"/>
+    </item>
+    <item row="3" column="4">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>～</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="3">
+     <widget class="QComboBox" name="comboBoxRangeL"/>
+    </item>
    </layout>
    <zorder>label</zorder>
    <zorder>btnRef</zorder>
@@ -122,11 +162,15 @@
    <zorder>label_2</zorder>
    <zorder>label_3</zorder>
    <zorder>comboBoxQuantize</zorder>
-   <zorder>comboBoxRangeL</zorder>
-   <zorder>lineFileName</zorder>
-   <zorder>label_5</zorder>
    <zorder>comboBoxRangeH</zorder>
+   <zorder>label_7</zorder>
+   <zorder>lineFileName</zorder>
    <zorder>btnAnalyze</zorder>
+   <zorder>label_8</zorder>
+   <zorder>doubleSpinBoxThreshold</zorder>
+   <zorder>doubleSpinBoxOffset</zorder>
+   <zorder>label_5</zorder>
+   <zorder>comboBoxRangeL</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="statusTip">
