--- a/KancopySaihu/analysis.ui
+++ b/KancopySaihu/analysis.ui
@@ -7,45 +7,31 @@
     <x>0</x>
     <y>0</y>
     <width>532</width>
-    <height>388</height>
+    <height>401</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Analysis</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="3" colspan="3">
-    <widget class="QPushButton" name="pushCancel">
-     <property name="text">
-      <string>キャンセル(&amp;C)</string>
-     </property>
-    </widget>
+   <item row="0" column="0" colspan="6">
+    <widget class="QOpenGLWidget" name="openGLWidget"/>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <widget class="QPushButton" name="pushAnalyze">
      <property name="text">
       <string>再解析(&amp;A)</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="4">
-    <widget class="QToolButton" name="toolScaleUp">
+   <item row="4" column="3" colspan="3">
+    <widget class="QPushButton" name="pushCancel">
      <property name="text">
-      <string>+</string>
+      <string>キャンセル(&amp;C)</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="6">
-    <widget class="QOpenGLWidget" name="openGLWidget"/>
-   </item>
-   <item row="3" column="0">
-    <widget class="QPushButton" name="pushOK">
-     <property name="text">
-      <string>確定(&amp;R)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="4">
+   <item row="2" column="0" colspan="4">
     <widget class="QScrollBar" name="horizontalScrollBar">
      <property name="singleStep">
       <number>5</number>
@@ -58,14 +44,35 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="5">
+   <item row="2" column="5">
     <widget class="QToolButton" name="toolScaleDown">
      <property name="text">
       <string>-</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="3">
+   <item row="6" column="3" colspan="3">
+    <widget class="QProgressBar" name="progressBar">
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="4">
+    <widget class="QToolButton" name="toolScaleUp">
+     <property name="text">
+      <string>+</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QPushButton" name="pushOK">
+     <property name="text">
+      <string>確定(&amp;R)</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="3">
     <widget class="QLabel" name="labelStatus">
      <property name="maximumSize">
       <size>
@@ -78,10 +85,13 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="3" colspan="3">
-    <widget class="QProgressBar" name="progressBar">
-     <property name="value">
-      <number>0</number>
+   <item row="1" column="0" colspan="6">
+    <widget class="QOpenGLWidget" name="openGLWidgetLyrics">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>25</height>
+      </size>
      </property>
     </widget>
    </item>
